# razgad

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: architecture.md
src/: codec.rs  error.rs  function_names.rs  heuristics.rs  lib.rs  model.rs  text.rs
src/schemes/: dlang.rs  itanium.rs  jni.rs  legacy.rs  mod.rs  msvc.rs  naming.rs  objc.rs  plain.rs  rust.rs  swift.rs  unity.rs  windows_c.rs  wrappers.rs
src/swift_demangle/: mod.rs
tests/: exhaustive.rs  function_names.rs  model.rs
